--- a/index.html
+++ b/index.html
@@ -234,10 +234,10 @@
     });
 
     // GitHub API Integration
-    const REPO_OWNER = 'YOUR_GITHUB_USERNAME';
-    const REPO_NAME = 'YOUR_REPO_NAME';
+    const REPO_OWNER = 'ravisairockey';
+    const REPO_NAME = 'Bug-Report';
     const FILE_PATH = 'bugs.json'; // File to store bugs
-    const GITHUB_TOKEN = 'YOUR_GITHUB_TOKEN'; // Generate in GitHub Settings > Developer Settings
+    const GITHUB_TOKEN = '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'; // Generate in GitHub Settings > Developer Settings
 
     async function saveBugToGitHub(bug) {
       try {
